example-demo01/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-demo01
  labels:
    app: example-demo01
spec:
  replicas: 0
  selector:
    matchLabels:
      app: example-demo01
  template:
    metadata:
      labels:
        app: example-demo01
    spec:
      containers:
      - name: example-demo01
        image: harbor-a.labaq.life/labaq/example-demo01
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
