example-demo01/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: example-demo01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-demo01
  workloadRef:                                 # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: example-demo01
  strategy:
    canary:
      canaryService: example-demo01-canary  # required
      stableService: example-demo01-stable  # required
      # Metadata which will be attached to the canary pods. This metadata will
      # only exist during an update, since there are no canary pods in a fully
      # promoted rollout.
      canaryMetadata:
        annotations:
          role: canary
        labels:
          role: canary
      # metadata which will be attached to the stable pods
      stableMetadata:
        annotations:
          role: stable
        labels:
          role: stable
      maxSurge: 1
      maxUnavailable: 0
      #scaleDownDelaySeconds: 10 ## scaleDownDelaySeconds can only be used with traffic routing
      #dynamicStableScale: true ## Canary dynamicStableScale cannot be used with scaleDownDelaySeconds
      steps:
      - setWeight: 50
      - pause: {} # pause indefinitely
