example-demo01/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: example-demo01-dr
spec:
  host: example-demo01
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: stable
    labels:
      role: stable
  - name: canary
    labels:
      role: canary
